Fix login redirect and missing static images
- Changed login success to redirect to /dashboard instead of reload
- Created SVG placeholder images for student testimonials
- Updated HTML template to use SVG files instead of missing JPG files
- This should fix login flow and eliminate 404 errors for static assets

--- a/templates/index.html
+++ b/templates/index.html
@@ -248,7 +248,7 @@
         <div class="testimonial-grid">
             <div class="testimonial-card">
                 <div class="testimonial-header">
-                    <img src="/static/img/student1.jpg" alt="Alex" class="testimonial-avatar">
+                    <img src="/static/img/student1.svg" alt="Alex" class="testimonial-avatar">
                     <div>
                         <h4>Alex Chen</h4>
                         <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
@@ -260,7 +260,7 @@
             
             <div class="testimonial-card">
                 <div class="testimonial-header">
-                    <img src="/static/img/student2.jpg" alt="Sarah" class="testimonial-avatar">
+                    <img src="/static/img/student2.svg" alt="Sarah" class="testimonial-avatar">
                     <div>
                         <h4>Sarah Johnson</h4>
                         <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
@@ -272,7 +272,7 @@
             
             <div class="testimonial-card">
                 <div class="testimonial-header">
-                    <img src="/static/img/student3.jpg" alt="Marcus" class="testimonial-avatar">
+                    <img src="/static/img/student3.svg" alt="Marcus" class="testimonial-avatar">
                     <div>
                         <h4>Marcus Rodriguez</h4>
                         <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
