--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -27,9 +27,17 @@
 <script src="{{ url_for('static', filename='js/modules/theme-manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/modules/auth-manager.js') }}"></script>
 <script src="{{ url_for('static', filename='js/modules/navigation-manager.js') }}"></script>
-<!-- Auth and Google -->
+<!-- Auth and Google: Load Google Identity Services first -->
+<script src="https://accounts.google.com/gsi/client" async defer onload="initGoogleAuth()"></script>
 <script src="{{ url_for('static', filename='js/auth/google-auth.js') }}"></script>
 <script src="{{ url_for('static', filename='js/auth/google-buttons.js') }}"></script>
-<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script>
+function initGoogleAuth() {
+    console.log('🔐 Google Identity Services loaded, initializing auth...');
+    if (window.GoogleAuth && window.CONFIG) {
+        window.GoogleAuth.init();
+    }
+}
+</script>
 
 {% block extra_css %}{% endblock %}
