--- a/templates/lesson.html
+++ b/templates/lesson.html
@@ -4,6 +4,9 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/lesson-content-blocks.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/lesson-blocks-enhanced.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/lesson-block-types.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/lesson-progress-enhanced.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/lesson.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/quiz-integration.css') }}">
 <style>
